--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -205,7 +205,11 @@
                         <img src="../../assets/icons/arrow2.svg" alt="">
                     </button>
                 </div>
-                <button class="our-friends-button">Get to know the rest</button>
+                <button class="our-friends-button"><a href="../pets/index2.html" target="blank"
+                        class="our-friends-button-link">Get
+                        to
+                        know the
+                        rest</a></button>
             </div>
         </section>
 
@@ -286,21 +290,27 @@
                 <h2 class="footer-title">We are waiting<br>for your visit</h2>
                 <div class="link-box-locations">
                     <img src="../../assets/icons/icon-map.svg" alt="">
-                    <a href="##" class="footer-link">1 Central Street, Boston<br>(entrance from the store)</a>
+                    <a href="##" class="footer-link"> 1
+                        Central Street, Boston<br>(entrance from the store)
+                        <!-- <div class="map-responsive">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.2479011884125!2d-71.05691498454685!3d42.35855584318925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e370868bc2ce7b%3A0x82fa7db94f5fea9e!2zMSBDZW50cmFsIFN0LCBCb3N0b24sIE1BIDAyMTA5LCDQodCo0JA!5e0!3m2!1sru!2sru!4v1647425872738!5m2!1sru!2sru"
+                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        </div> -->
+                    </a>
                 </div>
-
                 <!-- <div class="map-responsive">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.2479011884125!2d-71.05691498454685!3d42.35855584318925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e370868bc2ce7b%3A0x82fa7db94f5fea9e!2zMSBDZW50cmFsIFN0LCBCb3N0b24sIE1BIDAyMTA5LCDQodCo0JA!5e0!3m2!1sru!2sru!4v1647425872738!5m2!1sru!2sru"
-                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    </div>
-                    <button id="myBtn">Открыть модальный</button>
-                    <div id="myModal" class="modal">
-                        <div class="">
-                            <span class="close">&times;</span>
-                            <p>Некоторый текст в модальном..</p>
-                        </div>
-                    -->
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.2479011884125!2d-71.05691498454685!3d42.35855584318925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e370868bc2ce7b%3A0x82fa7db94f5fea9e!2zMSBDZW50cmFsIFN0LCBCb3N0b24sIE1BIDAyMTA5LCDQodCo0JA!5e0!3m2!1sru!2sru!4v1647425872738!5m2!1sru!2sru"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+                <button id="myBtn">Открыть модальный</button>
+                <div id="myModal" class="modal">
+                    <div class="">
+                        <span class="close">&times;</span>
+                        <p>Некоторый текст в модальном..</p>
+                    </div> -->
+
                 <div class="link-box-locations">
                     <img src="../../assets/icons/icon-map.svg" alt="">
                     <a href="##" class="footer-link">18 South Park, London</a>
