refactor: change size

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -47,8 +47,9 @@
         </section>
         <section class="container about-container" id="about">
             <div class="about-block">
-                <img src="../../assets/images/about-pets.jpg" class="about-image" alt="">
-
+                <div>
+                    <img src="../../assets/images/about-pets.jpg" class="about-image" alt="">
+                </div>
                 <div class="about-content">
                     <h2 class="about-title">About the shelter<br>“Cozy House”</h2>
                     <p class="about-text">Currently we have 121 dogs and 342 cats on our hands and statistics show that
@@ -72,7 +73,7 @@
                 <h2 class="our-friends-title">Our friends who<br>are looking for a house</h2>
                 <div class="our-friends-catalog">
                     <button class="previous">
-                        <img src="../../assets/icons/arrow1.svg" alt="">
+                        <img src="../../assets/icons/arrow1.svg" class="arrow" alt="">
                     </button>
                     <div class="card-box">
                         <div class="card">
@@ -278,19 +279,19 @@
             <div class="contacts">
                 <h2 class="footer-title">For questions<br>and suggestions</h2>
                 <div class="link-box-contacts">
-                    <img src="../../assets/icons/icon-email.svg" alt="">
+                    <img src="../../assets/icons/icon-email.svg" class="footer-icon-contacts" alt="">
                     <a href="mailto:email@shelter.com" class="footer-link link-email">email@shelter.com</a>
                 </div>
                 <div class="link-box-contacts">
-                    <img src="../../assets/icons/icon-phone.svg" alt="">
+                    <img src="../../assets/icons/icon-phone.svg" class="footer-icon-contacts" alt="">
                     <a href="tel:+13 674 567 75 54" class="footer-link link-tel">+13 674 567 75 54</a>
                 </div>
             </div>
             <div class="locations">
                 <h2 class="footer-title">We are waiting<br>for your visit</h2>
                 <div class="link-box-locations">
-                    <img src="../../assets/icons/icon-map.svg" alt="">
-                    <a href="##" class="footer-link"> 1
+                    <img src="../../assets/icons/icon-map.svg" class="footer-icon-locations" alt="">
+                    <a href="##" class="footer-link link-map"> 1
                         Central Street, Boston<br>(entrance from the store)
                         <!-- <div class="map-responsive">
                             <iframe
@@ -312,8 +313,8 @@
                     </div> -->
 
                 <div class="link-box-locations">
-                    <img src="../../assets/icons/icon-map.svg" alt="">
-                    <a href="##" class="footer-link">18 South Park, London</a>
+                    <img src="../../assets/icons/icon-map.svg" class="footer-icon-locations" alt="">
+                    <a href="##" class="footer-link link-map2">18 South Park, London</a>
                 </div>
             </div>
             <div class="footer-image">
