--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -391,30 +391,48 @@
         </section>
     </main>
 
+
     <footer class="container footer-container">
         <div class="footer-block">
             <div class="contacts">
                 <h2 class="footer-title">For questions<br>and suggestions</h2>
                 <div class="link-box-contacts">
-                    <img src="../../assets/icons/icon-email.svg" alt="">
+                    <img src="../../assets/icons/icon-email.svg" class="footer-icon-contacts" alt="">
                     <a href="mailto:email@shelter.com" class="footer-link link-email">email@shelter.com</a>
                 </div>
                 <div class="link-box-contacts">
-                    <img src="../../assets/icons/icon-phone.svg" alt="">
+                    <img src="../../assets/icons/icon-phone.svg" class="footer-icon-contacts" alt="">
                     <a href="tel:+13 674 567 75 54" class="footer-link link-tel">+13 674 567 75 54</a>
                 </div>
             </div>
             <div class="locations">
                 <h2 class="footer-title">We are waiting<br>for your visit</h2>
                 <div class="link-box-locations">
-                    <img src="../../assets/icons/icon-map.svg" alt="">
-                    <a href="##" class="footer-link"> 1
+                    <img src="../../assets/icons/icon-map.svg" class="footer-icon-locations" alt="">
+                    <a href="##" class="footer-link link-map"> 1
                         Central Street, Boston<br>(entrance from the store)
+                        <!-- <div class="map-responsive">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.2479011884125!2d-71.05691498454685!3d42.35855584318925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e370868bc2ce7b%3A0x82fa7db94f5fea9e!2zMSBDZW50cmFsIFN0LCBCb3N0b24sIE1BIDAyMTA5LCDQodCo0JA!5e0!3m2!1sru!2sru!4v1647425872738!5m2!1sru!2sru"
+                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        </div> -->
                     </a>
                 </div>
+                <!-- <div class="map-responsive">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.2479011884125!2d-71.05691498454685!3d42.35855584318925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e370868bc2ce7b%3A0x82fa7db94f5fea9e!2zMSBDZW50cmFsIFN0LCBCb3N0b24sIE1BIDAyMTA5LCDQodCo0JA!5e0!3m2!1sru!2sru!4v1647425872738!5m2!1sru!2sru"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+                <button id="myBtn">Открыть модальный</button>
+                <div id="myModal" class="modal">
+                    <div class="">
+                        <span class="close">&times;</span>
+                        <p>Некоторый текст в модальном..</p>
+                    </div> -->
+
                 <div class="link-box-locations">
-                    <img src="../../assets/icons/icon-map.svg" alt="">
-                    <a href="##" class="footer-link"><span class="footer-link-span">18 South Park, London</span></a>
+                    <img src="../../assets/icons/icon-map.svg" class="footer-icon-locations" alt="">
+                    <a href="##" class="footer-link link-map2">18 South Park, London</a>
                 </div>
             </div>
             <div class="footer-image">
