--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -21,10 +21,13 @@
         </div>
         <nav class="header-nav">
             <ul>
-                <li class="header-li"><a href="#about" class="header-link bottom current">About the shelter</a></li>
-                <li class="header-li"><a href="#pets" class="header-link">Our pets</a></li>
-                <li class="header-li"><a href="#help" class="header-link">Help the shelter</a></li>
-                <li class="header-li"><a href="#contacts" class="header-link">Contacts</a></li>
+                <li class="header-li"><a href="../main/index.html" target="blank" class="header-link">About the
+                        shelter</a></li>
+                <li class="header-li"><a href="#pets" class="header-link bottom">Our pets</a></li>
+                <li class="header-li"><a href="../main/index.html#help" target="blank" class="header-link">Help the
+                        shelter</a></li>
+                <li class="header-li"><a href="../main/index.html#contacts" target="blank"
+                        class="header-link">Contacts</a></li>
             </ul>
         </nav>
     </header>
@@ -372,10 +375,10 @@
                 </div>
 
                 <div class="slider-block">
-                    <button class="slider-button switch">
+                    <button class="slider-button switch" disabled>
                         <img src="../../assets/icons/before2.svg" alt="">
                     </button>
-                    <button class="slider-button switch">
+                    <button class="slider-button switch" disabled>
                         <img src="../../assets/icons/before1.svg" alt="">
                     </button>
                     <button class="slider-button one">
@@ -409,30 +412,17 @@
                 <h2 class="footer-title">We are waiting<br>for your visit</h2>
                 <div class="link-box-locations">
                     <img src="../../assets/icons/icon-map.svg" class="footer-icon-locations" alt="">
-                    <a href="##" class="footer-link link-map"> 1
+                    <a target="_blank"
+                        href="https://www.google.com/maps/place/1+Central+St,+Boston,+MA+02109,+%D0%A1%D0%A8%D0%90/@42.358552,-71.054726,16z/data=!4m5!3m4!1s0x89e370868bc2ce7b:0x82fa7db94f5fea9e!8m2!3d42.3585519!4d-71.0547263?hl=ru"
+                        class="footer-link link-map">1
                         Central Street, Boston<br>(entrance from the store)
-                        <!-- <div class="map-responsive">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.2479011884125!2d-71.05691498454685!3d42.35855584318925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e370868bc2ce7b%3A0x82fa7db94f5fea9e!2zMSBDZW50cmFsIFN0LCBCb3N0b24sIE1BIDAyMTA5LCDQodCo0JA!5e0!3m2!1sru!2sru!4v1647425872738!5m2!1sru!2sru"
-                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                        </div> -->
                     </a>
                 </div>
-                <!-- <div class="map-responsive">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.2479011884125!2d-71.05691498454685!3d42.35855584318925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e370868bc2ce7b%3A0x82fa7db94f5fea9e!2zMSBDZW50cmFsIFN0LCBCb3N0b24sIE1BIDAyMTA5LCDQodCo0JA!5e0!3m2!1sru!2sru!4v1647425872738!5m2!1sru!2sru"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                </div>
-                <button id="myBtn">Открыть модальный</button>
-                <div id="myModal" class="modal">
-                    <div class="">
-                        <span class="close">&times;</span>
-                        <p>Некоторый текст в модальном..</p>
-                    </div> -->
-
                 <div class="link-box-locations">
                     <img src="../../assets/icons/icon-map.svg" class="footer-icon-locations" alt="">
-                    <a href="##" class="footer-link link-map2">18 South Park, London</a>
+                    <a target="_blank"
+                        href="https://www.google.com/maps/place/%D0%9F%D0%B0%D1%80%D0%BA+%D0%AE%D0%B3/@51.4899577,-0.2479026,11z/data=!4m9!1m2!2m1!1s18+South+Park,+London!3m5!1s0x48760f79376fa0e3:0x202ac3af5c1ea4ec!8m2!3d51.4691953!4d-0.1941945!15sChUxOCBTb3V0aCBQYXJrLCBMb25kb26SAQRwYXJr?hl=ru"
+                        class="footer-link link-map2">18 South Park, London</a>
                 </div>
             </div>
             <div class="footer-image">
