refactor: small changes

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -73,12 +73,12 @@
         <section class="container our-friends-container" id="pets">
             <div class="our-friends-block">
                 <h2 class="our-friends-title">Our friends who<br>are looking for a house</h2>
+
                 <div class="our-friends-catalog">
                     <button class="previous">
                         <img src="../../assets/icons/arrow1.svg" class="arrow" alt="">
                     </button>
                     <div class="card-box">
-                        <!-- <div class="card-box yes"> -->
                         <div class="card">
                             <img src="../../assets/images/pets-katrine.jpg" class="card-image" alt="">
                             <h4 class="card-name">Katrine</h4>
@@ -119,7 +119,7 @@
                             </div>
                             <!-- -------------------- -->
                         </div>
-                        <div class="card swiper-slide">
+                        <div class="card">
                             <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="">
                             <h4 class="card-name">Jennifer</h4>
                             <button class="card-button"><a href="#openModal2" class="card-link">Learn more</a></button>
@@ -205,8 +205,10 @@
                             <!-- -------------------- -->
                         </div>
 
+                        <!-- ========================== -->
 
-                        <!-- <div class="card-box net">
+
+                        <!-- <div class="card-box">
                             <div class="card">
                                 <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="">
                                 <h4 class="card-name">Freddie</h4>
@@ -224,7 +226,30 @@
                                 <h4 class="card-name">Freddie</h4>
                                 <button class="card-button"><a href="#openModal8" class="card-link">Learn
                                         more</a></button>
-                            </div> -->
+                            </div>
+                        </div>
+
+                        <div class="card-box">
+                            <div class="card">
+                                <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="">
+                                <h4 class="card-name">Freddie</h4>
+                                <button class="card-button"><a href="#openModal8" class="card-link">Learn
+                                        more</a></button>
+                            </div>
+                            <div class="card">
+                                <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="">
+                                <h4 class="card-name">Freddie</h4>
+                                <button class="card-button"><a href="#openModal8" class="card-link">Learn
+                                        more</a></button>
+                            </div>
+                            <div class="card">
+                                <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="">
+                                <h4 class="card-name">Freddie</h4>
+                                <button class="card-button"><a href="#openModal8" class="card-link">Learn
+                                        more</a></button>
+                            </div>
+                        </div> -->
+                        <!-- ================= -->
                     </div>
                     <button class="next">
                         <img src="../../assets/icons/arrow2.svg" alt="">
