--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Georgian&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style-adaptive.css">
     <!-- <link rel="icon" href="./assets/favicon.ico"> -->
     <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> -->
 </head>
@@ -42,7 +43,8 @@
                             friend</a></button>
                 </div>
                 <div>
-                    <img src="../../assets/images/start-puppy.jpg" class="not-only-image" alt="">
+                    <img src="../../assets/images/puppy-1280.jpg" class="not-only-image" alt="">
+                    <img src="../../assets/images/puppy-768.jpg" class="not-only-image2" alt="">
                 </div>
             </div>
         </section>
