--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -81,7 +81,7 @@
                         <img src="../../assets/icons/arrow1.svg" class="arrow" alt="">
                     </button>
                     <div class="card-box">
-                        <div class="card">
+                        <div class="card card1">
                             <img src="../../assets/images/pets-katrine.jpg" class="card-image" alt="">
                             <h4 class="card-name">Katrine</h4>
                             <button class="card-button"><a href="#openModal1" class="card-link">Learn more</a></button>
@@ -121,7 +121,7 @@
                             </div>
                             <!-- -------------------- -->
                         </div>
-                        <div class="card">
+                        <div class="card card2">
                             <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="">
                             <h4 class="card-name">Jennifer</h4>
                             <button class="card-button"><a href="#openModal2" class="card-link">Learn more</a></button>
@@ -166,7 +166,7 @@
                             </div>
                             <!-- -------------------- -->
                         </div>
-                        <div class="card">
+                        <div class="card card3">
                             <img src="../../assets/images/pets-woody.jpg" class="card-image" alt="">
                             <h4 class="card-name">Woody</h4>
                             <button class="card-button"><a href="#openModal3" class="card-link">Learn more</a></button>
