feat: add flex to help

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -268,6 +268,44 @@
         <section class="container help-container" id="help">
             <h2 class="help-title">How you can help<br>our shelter</h2>
             <div class="grid">
+                <div class="flex">
+                    <div class="grid-icon1 icon"></div>
+                    <p class="grid-text">Pet food</p>
+                </div>
+                <div class="flex">
+                    <div class="grid-icon2 icon"></div>
+                    <p class="grid-text">Transportation</p>
+                </div>
+                <div class="flex">
+                    <div class="grid-icon3 icon"></div>
+                    <p class="grid-text">Toys</p>
+                </div>
+                <div class="flex">
+                    <div class="grid-icon4 icon"></div>
+                    <p class="grid-text">Bowls and cups</p>
+                </div>
+                <div class="flex">
+                    <div class="grid-icon5 icon"></div>
+                    <p class="grid-text">Shampoos</p>
+                </div>
+                <div class="flex">
+                    <div class="grid-icon6 icon"></div>
+                    <p class="grid-text">Vitamins</p>
+                </div>
+                <div class="flex">
+                    <div class="grid-icon7 icon"></div>
+                    <p class="grid-text">Medicines</p>
+                </div>
+                <div class="flex">
+                    <div class="grid-icon8 icon"></div>
+                    <p class="grid-text">Collars / leashes</p>
+                </div>
+                <div class="flex">
+                    <div class="grid-icon9 icon"></div>
+                    <p class="grid-text">Sleeping areas</p>
+                </div>
+            </div>
+            <!-- <div class="grid">
                 <div>
                     <div class="grid-icon1 icon"></div>
                     <p class="grid-text">Pet food</p>
@@ -304,7 +342,8 @@
                     <div class="grid-icon9 icon"></div>
                     <p class="grid-text">Sleeping areas</p>
                 </div>
-            </div>
+            </div> -->
+
         </section>
 
         <section class="container in-addition-container" id="contacts">
