fix: change modal box

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -204,54 +204,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- -------------------- -->
                         </div>
-
-                        <!-- ========================== -->
-
-
-                        <!-- <div class="card-box">
-                            <div class="card">
-                                <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="">
-                                <h4 class="card-name">Freddie</h4>
-                                <button class="card-button"><a href="#openModal8" class="card-link">Learn
-                                        more</a></button>
-                            </div>
-                            <div class="card">
-                                <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="">
-                                <h4 class="card-name">Freddie</h4>
-                                <button class="card-button"><a href="#openModal8" class="card-link">Learn
-                                        more</a></button>
-                            </div>
-                            <div class="card">
-                                <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="">
-                                <h4 class="card-name">Freddie</h4>
-                                <button class="card-button"><a href="#openModal8" class="card-link">Learn
-                                        more</a></button>
-                            </div>
-                        </div>
-
-                        <div class="card-box">
-                            <div class="card">
-                                <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="">
-                                <h4 class="card-name">Freddie</h4>
-                                <button class="card-button"><a href="#openModal8" class="card-link">Learn
-                                        more</a></button>
-                            </div>
-                            <div class="card">
-                                <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="">
-                                <h4 class="card-name">Freddie</h4>
-                                <button class="card-button"><a href="#openModal8" class="card-link">Learn
-                                        more</a></button>
-                            </div>
-                            <div class="card">
-                                <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="">
-                                <h4 class="card-name">Freddie</h4>
-                                <button class="card-button"><a href="#openModal8" class="card-link">Learn
-                                        more</a></button>
-                            </div>
-                        </div> -->
-                        <!-- ================= -->
                     </div>
                     <button class="next">
                         <img src="../../assets/icons/arrow2.svg" alt="">
@@ -267,42 +220,42 @@
 
         <section class="container help-container" id="help">
             <h2 class="help-title">How you can help<br>our shelter</h2>
-            <div class="grid">
-                <div class="flex">
-                    <div class="grid-icon1 icon"></div>
-                    <p class="grid-text">Pet food</p>
+            <div class="help-block">
+                <div class="help-box">
+                    <div class="help-icon1 icon"></div>
+                    <p class="help-text">Pet food</p>
                 </div>
-                <div class="flex">
-                    <div class="grid-icon2 icon"></div>
-                    <p class="grid-text">Transportation</p>
+                <div class="help-box">
+                    <div class="help-icon2 icon"></div>
+                    <p class="help-text">Transportation</p>
                 </div>
-                <div class="flex">
-                    <div class="grid-icon3 icon"></div>
-                    <p class="grid-text">Toys</p>
+                <div class="help-box">
+                    <div class="help-icon3 icon"></div>
+                    <p class="help-text">Toys</p>
                 </div>
-                <div class="flex">
-                    <div class="grid-icon4 icon"></div>
-                    <p class="grid-text">Bowls and cups</p>
+                <div class="help-box">
+                    <div class="help-icon4 icon"></div>
+                    <p class="help-text">Bowls and cups</p>
                 </div>
-                <div class="flex">
-                    <div class="grid-icon5 icon"></div>
-                    <p class="grid-text">Shampoos</p>
+                <div class="help-box">
+                    <div class="help-icon5 icon"></div>
+                    <p class="help-text">Shampoos</p>
                 </div>
-                <div class="flex">
-                    <div class="grid-icon6 icon"></div>
-                    <p class="grid-text">Vitamins</p>
+                <div class="help-box">
+                    <div class="help-icon6 icon"></div>
+                    <p class="help-text">Vitamins</p>
                 </div>
-                <div class="flex">
-                    <div class="grid-icon7 icon"></div>
-                    <p class="grid-text">Medicines</p>
+                <div class="help-box">
+                    <div class="help-icon7 icon"></div>
+                    <p class="help-text">Medicines</p>
                 </div>
-                <div class="flex">
-                    <div class="grid-icon8 icon"></div>
-                    <p class="grid-text">Collars / leashes</p>
+                <div class="help-box">
+                    <div class="help-icon8 icon"></div>
+                    <p class="help-text">Collars / leashes</p>
                 </div>
-                <div class="flex">
-                    <div class="grid-icon9 icon"></div>
-                    <p class="grid-text">Sleeping areas</p>
+                <div class="help-box">
+                    <div class="help-icon9 icon"></div>
+                    <p class="help-text">Sleeping areas</p>
                 </div>
             </div>
             <!-- <div class="grid">
