fix: change bg image

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -43,8 +43,8 @@
                             friend</a></button>
                 </div>
                 <div>
-                    <img src="../../assets/images/puppy-1280.jpg" class="not-only-image" alt="">
-                    <img src="../../assets/images/puppy-768.jpg" class="not-only-image2" alt="">
+                    <img src="../../assets/images/puppy-1280.png" class="not-only-image" alt="">
+                    <img src="../../assets/images/puppy-768.png" class="not-only-image2" alt="">
                 </div>
             </div>
         </section>
@@ -301,7 +301,7 @@
 
         <section class="container in-addition-container" id="contacts">
             <div class="in-addition-block">
-                <img src="../../assets/images/donation-dog.jpg" class="in-addition-image" alt="">
+                <img src="../../assets/images/donation-dog.png" class="in-addition-image" alt="">
                 <div class="in-addition-content">
                     <h2 class="in-addition-title">You can also<br>make a donation</h2>
                     <p class="in-addition-text">Name of the bank / Type of bank account</p>
@@ -348,7 +348,7 @@
                 </div>
             </div>
             <div class="footer-image">
-                <img src="../../assets/images/footer-puppy.jpg" alt="">
+                <img src="../../assets/images/footer-puppy.png" alt="">
             </div>
         </div>
     </footer>
