--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -426,7 +426,7 @@
                 </div>
             </div>
             <div class="footer-image">
-                <img src="../../assets/images/footer-puppy.jpg" alt="">
+                <img src="../../assets/images/footer-puppy.png" alt="">
             </div>
         </div>
     </footer>
