feat: add adaptive 320

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -28,6 +28,11 @@
                 <li class="header-li"><a href="#contacts" class="header-link">Contacts</a></li>
             </ul>
         </nav>
+        <div class="hamburger" id="hamburger">
+            <span class="line line-1"></span>
+            <span class="line line-2"></span>
+            <span class="line line-3"></span>
+        </div>
     </header>
 
     <main>
@@ -45,6 +50,7 @@
                 <div>
                     <img src="../../assets/images/puppy-1280.png" class="not-only-image" alt="">
                     <img src="../../assets/images/puppy-768.png" class="not-only-image2" alt="">
+                    <img src="../../assets/images/puppy-320..png" class="not-only-image3" alt="">
                 </div>
             </div>
         </section>
@@ -52,6 +58,8 @@
             <div class="about-block">
                 <div>
                     <img src="../../assets/images/about-pets.jpg" class="about-image" alt="">
+                    <img src="../../assets/images/about-pets-768.jpg" class="about-image2" alt="">
+                    <img src="../../assets/images/about-pets-350.jpg" class="about-image3" alt="">
                 </div>
                 <div class="about-content">
                     <h2 class="about-title">About the shelter<br>“Cozy House”</h2>
@@ -207,6 +215,14 @@
                         </div>
                     </div>
                     <button class="next">
+                        <img src="../../assets/icons/arrow2.svg" class="arrow" alt="">
+                    </button>
+                </div>
+                <div class="previous-next-box">
+                    <button class="previous-320">
+                        <img src="../../assets/icons/arrow1.svg" alt="">
+                    </button>
+                    <button class="next-320">
                         <img src="../../assets/icons/arrow2.svg" alt="">
                     </button>
                 </div>
